--- a/SOK.Application/Templates/Email/header.html
+++ b/SOK.Application/Templates/Email/header.html
@@ -231,7 +231,7 @@
 
                                                             <div
                                                                 style="font-size: 14px; line-height: 140%; text-align: center; word-wrap: break-word;">
-                                                                <p style="line-height: 140%;">Gądów Mały, Wrocław</p>
+                                                                <p style="line-height: 140%;">%parish_name_appendix%</p>
                                                             </div>
 
                                                         </td>
