--- a/SOK.Web/wwwroot/css/site.css
+++ b/SOK.Web/wwwroot/css/site.css
@@ -47,9 +47,13 @@ body {
         transition: border-color 0.2s, box-shadow 0.2s, outline 0.05s, outline-offset 0.05s;
     }
 
-    .btn:focus {
-        box-shadow: 0 0 0 .1rem #e1e1e1,0 0 0 .25rem var(--color-primary) !important;
+    .divider {
+        @apply text-(--divider-color);
     }
+
+    /* .btn:focus {
+        box-shadow: 0 0 0 .1rem #e1e1e1,0 0 0 .25rem var(--color-primary) !important;
+    } */
 
     [id$="-app"]:not([data-is-loaded="true"]) {
         @apply relative;
@@ -76,9 +80,9 @@ html {
     }
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+/* .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
     box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
+} */
 
 html {
     position: relative;
